--- a/conf/application.conf
+++ b/conf/application.conf
@@ -351,3 +351,9 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+slick.dbs.default.driver = "slick.driver.PostgresDriver$"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://elmer-01.db.elephantsql.com:5432/zufrouyq"
+slick.dbs.default.db.user="zufrouyq"
+slick.dbs.default.db.password="	JHYx6oieNjuQ6d0OQswrBLr6yofs9EXA"
